--- a/app/website-ingress.yaml
+++ b/app/website-ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: website-ingress
@@ -8,10 +8,14 @@ metadata:
     ingress.kubernetes.io/ssl-redirect: "false"
     traefik.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx-example
   rules:
-  - http:
-      paths:
-      - path: /app
-        backend:
-          serviceName: website-service
-          servicePort: 80
+    - http:
+        paths:
+          - path: /app
+            pathType: Prefix
+            backend:
+              service:
+                name: website-service
+                port:
+                  number: 80
